--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -13,3 +13,9 @@
 .header__lang-link:hover {
   text-decoration: underline;
 }
+
+@media screen and (max-width: 425px) {
+  .header__lang-link {
+    font-size: 18px;
+  }
+}
