--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,5 +2,35 @@
   display: flex;
   margin: 28px auto 56px auto;
   justify-content: space-between;
-  width: calc(100% - 96px);
+  width: calc(100% - 7.5%);
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    width: calc(100% - 48 / 1280);
+  }
+}
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .header {
+    width: calc(100% - 48 / 1024);
+    margin: 28px auto 48px auto;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header {
+    width: calc(100% - 24 / 768);
+    margin: 28px auto 48px auto;
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .header {
+    width: calc(100% - 24 / 425);
+    margin: 28px auto 48px auto;
+  }
+}
+@media screen and (max-width: 425px) {
+  .header {
+    margin: 16px auto 48px auto;
+    width: calc(100% - 16 / 320);
+  }
 }
