--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,38 @@
 .lead__subtitle {
   color: #fff;
-  width: 640px;
+  max-width: 640px;
+  min-width: 288px;
   font-weight: 400;
   font-size: 30px;
   line-height: 1.2;
   text-align: center;
   margin: 0 auto;
   margin-bottom: 64px;
+  padding: 0 5%;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .lead__title {
+    margin-bottom: 56px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .lead__title {
+    margin-bottom: 56px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .lead__title {
+    margin-bottom: 56px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 1.25;
+    margin-bottom: 40px;
+  }
 }
