--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,6 @@
 .lead__title {
-  width: 720px;
+  max-width: 720px;
+  min-width: 288px;
   margin: 0 auto;
   font-weight: 900;
   font-size: 96px;
@@ -7,4 +8,21 @@
   text-align: center;
   color: #fff;
   margin-bottom: 32px;
+  padding: 0 5%;
+}
+
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 1.1;
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 1.1;
+    margin-bottom: 16px;
+  }
 }
