--- a/pages/index.css
+++ b/pages/index.css
@@ -1,10 +1,11 @@
 /* Начало общих свойств */
+@import url(../vendor/fonts.css);
 @import url(../vendor/normalize.css);
 @import url(../blocks/page/page.css);
 /* Конец общих свойств */
 /* Начало header */
 @import url(../blocks/header/header.css);
-@import url(../blocks/header/__logo/.);
+@import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
 @import url(../blocks/header/__lang-link/_active/header__lang-link_active.css);
@@ -34,7 +35,6 @@
 /* Начало places */
 @import url(../blocks/places/places.css);
 @import url(../blocks/places/place/place.css);
-@import url(../blocks/places/place/__wrap/place__wrap.css);
 @import url(../blocks/places/place/__wrap-text/place__wrap-text.css);
 @import url(../blocks/places/place/__title/place__title.css);
 @import url(../blocks/places/place/__image/place__image.css);
@@ -43,3 +43,16 @@
 @import url(../blocks/places/place/__link/place__link.css);
 @import url(../blocks/places/place/__url-heading/place__url-heading.css);
 /* Конец places */
+/* Начало cover */
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__background/cover__background.css);
+/* Конец cover */
+/* Начало footer */
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__wrap/footer__wrap.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+/* Конец footer */
