--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -18,3 +18,13 @@
   cursor: pointer;
 }
 
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .cover__overlay {
+    padding: 0;
+    }
+}
+@media screen and (max-width: 425px) {
+  .cover__overlay {
+    padding: 0;
+    }
+}
