--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -6,3 +6,13 @@
   margin: 0;
   max-width: 360px;
 }
+
+@media screen and (max-width: 425px) {
+  .cover__subtitle {
+    max-width: 288px;
+    font-size: 14px;
+    line-height: 1.14;
+    padding: 0 14px;
+    box-sizing: border-box;
+    }
+}
