--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,3 +4,26 @@
   color: #fff;
   margin-bottom: 92px;
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .cover {
+  width: 100%;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .cover {
+    width: 100%;
+    }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .cover {
+    width: 100%;
+    margin-bottom: 88px;
+    }
+}
+@media screen and (max-width: 425px) {
+  .cover {
+    width: 100%;
+    margin-bottom: 64px;
+    }
+}
