--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -3,3 +3,10 @@
   line-height: 1.14;
   text-align: right;
 }
+
+@media screen and (max-width: 425px) {
+  .footer__copyright {
+    line-height: 1;
+    text-align: left;
+  }
+}
