--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -14,3 +14,14 @@
 .footer__link:hover {
   opacity: 0.8;
 }
+
+@media screen and (max-width: 425px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 1;
+    margin-bottom: 32px;
+  }
+  .footer__link:last-of-type {
+    margin-bottom: 48px;
+  }
+}
