--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,5 +5,10 @@
   background-color: #2A2C2F;
   font-family: 'Inter', sans-serif;
   font-size: 16px;
-  border: 1px dashed red;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
 }
