--- a/blocks/places/place/__image/place__image.css
+++ b/blocks/places/place/__image/place__image.css
@@ -1,4 +1,35 @@
 .place__image {
   object-fit: cover;
+  width: 100%;
   max-width: 460px;
+}
+
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .place__image {
+    /* max-width: 440px; */
+  }
+}
+@media screen and (min-width: 861px) and (max-width: 1023px) {
+  .place__image {
+    /* max-width: 440px; */
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 860px) {
+  .place__image {
+    /* max-width: 440px; */
+  }
+}
+/* @media screen and (min-width: 768px) and (max-width: 1023px) {
+  
+} */
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .place__image {
+    /* max-width: 340px; */
+  }
+}
+@media screen and (max-width: 425px) {
+  .place__image {
+    width: 100%;
+  }
 }
