--- a/blocks/places/place/__paragraph/place__paragraph.css
+++ b/blocks/places/place/__paragraph/place__paragraph.css
@@ -4,4 +4,19 @@
   line-height: 1.63;
   margin: 0;
   margin-bottom: 26px;
+  width: 100%;
+}
+
+@media screen and (min-width: 1280px) {
+}
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+}
+@media screen and (max-width: 425px) {
+  .place__paragraph {
+  font-size: 16px;
+  }
 }
