--- a/blocks/places/place/__wrap-text/place__wrap-text.css
+++ b/blocks/places/place/__wrap-text/place__wrap-text.css
@@ -1,4 +1,37 @@
 .place__wrap-text {
   margin: 0;
   margin-left: 40px;
+  width: 100%;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .place__wrap-text {
+    margin-left: 32px;
+  }
+}
+
+@media screen and (min-width: 861px) and (max-width: 1023px) {
+  .place__wrap-text {
+    margin-left: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 860px) {
+  .place__wrap-text {
+    margin-left: 28px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .place__wrap-text {
+    margin-left: 28px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .place__wrap-text {
+    margin: 0;
+    padding: 0 16px;
+    box-sizing: border-box;
+  }
 }
