--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -1,9 +1,40 @@
 .place {
+  width: 100%;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 460px);
+  grid-template-columns: 460px 484px;
   color: #fff;
   margin: 0;
   row-gap: 48px;
-  padding: 0;
   margin-bottom: 80px;
+}
+
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .place {
+    grid-template-columns: 440px 456px;
+  }
+}
+@media screen and (min-width: 861px) and (max-width: 1023px) {
+  .place {
+    grid-template-columns: 440px calc(50% - 48px);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 860px) {
+  .place {
+    grid-template-columns: 340px calc(50% - 24px);
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .place {
+    grid-template-columns: calc(50% - 24px) calc(50%);
+    margin: 0 auto 80px;
+    padding: 0 24px;
+    box-sizing: border-box;
+  }
+}
+@media screen and (max-width: 425px) {
+  .place {
+    grid-template-columns: calc(100%);
+    margin: 0 auto 50px;
+  }
 }
