--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,4 +1,25 @@
 .places {
-  max-width: 984px;
+  max-width: 928px;
   margin: 0 auto;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .places {
+    max-width: calc(100% - 96px);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .places {
+    max-width: calc(100% - 48px);
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .places {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 425px) {
+  .places {
+    width: 100%;
+  }
 }
