--- a/blocks/places/place/place.css
+++ b/blocks/places/place/place.css
@@ -8,6 +8,10 @@
   margin-bottom: 80px;
 }
 
+.place:last-of-type {
+  margin-bottom: 92px;
+}
+
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .place {
@@ -23,6 +27,9 @@
   .place {
     grid-template-columns: 340px calc(50% - 24px);
   }
+  .place:last-of-type {
+    margin-bottom: 90px;
+  }
 }
 @media screen and (min-width: 425px) and (max-width: 767px) {
   .place {
@@ -31,10 +38,16 @@
     padding: 0 24px;
     box-sizing: border-box;
   }
+  .place:last-of-type {
+    margin-bottom: 90px;
+  }
 }
 @media screen and (max-width: 425px) {
   .place {
     grid-template-columns: calc(100%);
     margin: 0 auto 50px;
+  }
+  .place:last-of-type {
+    margin-bottom: 66px;
   }
 }
