--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,10 +1,26 @@
 .lead__caption {
   color: #fff;
   text-transform: uppercase;
-  /* max-width: 158px; */
   font-weight: 400;
   font-size: 10px;
   line-height: 1.4;
   letter-spacing: 1.5px;
+  margin: 0;
   margin-bottom: 92px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .lead__caption {
+    margin-left: 24px;
+  }
+}
+@media screen and (max-width: 425px) {
+  .lead__caption {
+    margin-left: 16px;
+  }
 }
