--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -12,20 +12,22 @@
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .lead__title {
+  .lead__subtitle {
     margin-bottom: 56px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  .lead__title {
+  .lead__subtitle {
     margin-bottom: 56px;
   }
 }
 
 @media screen and (min-width: 425px) and (max-width: 767px) {
-  .lead__title {
+  .lead__subtitle {
     margin-bottom: 56px;
+    font-size: 16px;
+    line-height: 1.25;
   }
 }
 
