--- a/blocks/places/place/__paragraph/place__paragraph.css
+++ b/blocks/places/place/__paragraph/place__paragraph.css
@@ -7,6 +7,10 @@
   width: 100%;
 }
 
+.place__paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
 @media screen and (min-width: 1280px) {
 }
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
