--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,10 +1,10 @@
 .footer__link {
-  display: inline-block;
   color: #fff;
   text-decoration: none;
   font-size: 16px;
   line-height: 1.12;
   margin-right: 18px;
+  padding-top: 10px;
 }
 
 .footer__link:last-of-type {
@@ -20,6 +20,7 @@
     font-size: 24px;
     line-height: 1;
     margin-bottom: 32px;
+    padding-top: 0;
   }
   .footer__link:last-of-type {
     margin-bottom: 48px;
