--- a/blocks/footer/__wrap/footer__wrap.css
+++ b/blocks/footer/__wrap/footer__wrap.css
@@ -1,3 +1,8 @@
+.footer__wrap {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 @media screen and (max-width: 425px) {
   .footer__wrap {
     display: flex;
