--- a/pages/index.css
+++ b/pages/index.css
@@ -34,14 +34,14 @@
 /* Конец photo-grid */
 /* Начало places */
 @import url(../blocks/places/places.css);
-@import url(../blocks/places/place/place.css);
-@import url(../blocks/places/place/__wrap-text/place__wrap-text.css);
-@import url(../blocks/places/place/__title/place__title.css);
-@import url(../blocks/places/place/__image/place__image.css);
-@import url(../blocks/places/place/__paragraph/place__paragraph.css);
-@import url(../blocks/places/place/__website/place__website.css);
-@import url(../blocks/places/place/__link/place__link.css);
-@import url(../blocks/places/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__url-heading/place__url-heading.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__wrap-text/place__wrap-text.css);
 /* Конец places */
 /* Начало cover */
 @import url(../blocks/cover/cover.css);
