--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,12 +7,18 @@
   max-width: 360px;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
+  .cover__subtitle {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 460px) {
   .cover__subtitle {
     max-width: 288px;
     font-size: 14px;
     line-height: 1.14;
     padding: 0 14px;
     box-sizing: border-box;
-    }
+  }
 }
