--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,29 +5,18 @@
   width: calc(100% - 96px);
 }
 
-@media screen and (min-width: 1280px) {
+@media screen and (max-width: 1280px) {
   .header {
-    width: calc(100% - 96px);
-  }
-}
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .header {
-    width: calc(100% - 96px);
     margin: 28px auto 48px auto;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+@media screen and (max-width: 1023px) {
   .header {
     width: calc(100% - 48px);
-    margin: 28px auto 48px auto;
   }
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  .header {
-    width: calc(100% - 48px);
-    margin: 28px auto 48px auto;
-  }
-}
+
 @media screen and (max-width: 425px) {
   .header {
     margin: 16px auto 48px auto;
