--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -9,18 +9,15 @@
   margin-bottom: 92px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 1023px) {
   .lead__caption {
     margin-left: 24px;
   }
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  .lead__caption {
-    margin-left: 24px;
-  }
-}
+
 @media screen and (max-width: 425px) {
   .lead__caption {
     margin-left: 16px;
+    margin-bottom: 64px;
   }
 }
