--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -8,24 +8,16 @@
   text-align: center;
   margin: 0 auto;
   margin-bottom: 64px;
-  padding: 0 5%;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1280px) {
   .lead__subtitle {
     margin-bottom: 56px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (max-width: 768px) {
   .lead__subtitle {
-    margin-bottom: 56px;
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  .lead__subtitle {
-    margin-bottom: 56px;
     font-size: 16px;
     line-height: 1.25;
   }
@@ -33,8 +25,6 @@
 
 @media screen and (max-width: 425px) {
   .lead__subtitle {
-    font-size: 16px;
-    line-height: 1.25;
     margin-bottom: 40px;
   }
 }
