--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -3,3 +3,9 @@
   margin: 0 auto;
   margin-bottom: 92px;
 }
+
+@media screen and (max-width: 425px) {
+  .photo-grid {
+    margin-bottom: 64px;
+  }
+}
