--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -4,32 +4,10 @@
   max-width: 460px;
 }
 
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .place__image {
-    /* max-width: 440px; */
-  }
-}
-@media screen and (min-width: 861px) and (max-width: 1023px) {
-  .place__image {
-    /* max-width: 440px; */
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 860px) {
-  .place__image {
-    /* max-width: 440px; */
-  }
-}
-/* @media screen and (min-width: 768px) and (max-width: 1023px) {
-  
-} */
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  .place__image {
-    /* max-width: 340px; */
-  }
-}
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 650px) {
   .place__image {
     width: 100%;
+    margin: 0 auto;
+    margin-bottom: 32px;
   }
 }
