--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -7,30 +7,27 @@
   max-width: 460px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .place__title {
     max-width: 440px;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+
+@media screen and (max-width: 1023px) {
   .place__title {
     max-width: 340px;
     font-size: 42px;
     line-height: 1.1;
   }
 }
-@media screen and (min-width: 425px) and (max-width: 767px) {
-  .place__title {
-    max-width: 340px;
-    font-size: 42px;
-    line-height: 1.1;
-  }
-}
-@media screen and (max-width: 425px) {
+
+@media screen and (max-width: 650px) {
   .place__title {
     width: calc(100% - 32px);
+    max-width: 460px;
     font-size: 32px;
     line-height: 1.09;
     margin: 0 auto;
+    margin-bottom: 32px;
   }
 }
