--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -2,39 +2,38 @@
   align-self: end;
   margin-left: 40px;
   width: 100%;
+  max-width: 456px;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (max-width: 1279px) {
   .place__website {
     margin-left: 32px;
     width: 456px;
   }
 }
 
-@media screen and (min-width: 861px) and (max-width: 1023px) {
+@media screen and (max-width: 1024px) {
   .place__website {
-    margin-left: 32px;
     width: calc(100% - 24px);
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 860px) {
-  .place__website {
-    margin-left: 28px;
-    width: calc(100% - 24px);
-  }
-}
-
-@media screen and (min-width: 425px) and (max-width: 767px) {
+@media screen and (max-width: 860px) {
   .place__website {
     margin-left: 28px;
-    width: calc(100% - 24px);
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 768px) {
+  .place__website {
+    max-width: 460px;
+  }
+}
+
+@media screen and (max-width: 650px) {
   .place__website {
     width: calc(100% - 32px);
     margin: 0 auto;
+    margin-bottom: 32px;
   }
 }
