Внес исправления, согласно комментариям ревьюера.
Пожалуйста, не отправляйте в академ!

--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,6 +2,8 @@
   font-size: 14px;
   line-height: 1.14;
   text-align: right;
+  margin: 0;
+  min-width: 125px;
 }
 
 @media screen and (max-width: 425px) {
