--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -5,14 +5,31 @@
   color: #fff;
 }
 
+@media screen and (max-width: 1280px) {
+  .intro {
+    max-width: 928px;
+  }
+}
+
 @media screen and (max-width: 1024px) {
   .intro {
-    margin-bottom: 88px;
+    max-width: calc(100% - 96px);
+    margin-left: 48px;
+    margin-bottom: 92px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .intro {
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+    margin-bottom: 88px;
+  }
+}
+
+@media screen and (max-width: 425px) {
+  .intro {
+    max-width: calc(100% - 32px);
     margin-bottom: 64px;
   }
 }
