--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -12,8 +12,8 @@
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .lead {
-    max-width: 100%;
+    max-width: 928px;
   }
 }
